# PQS

./: CMakeLists.txt  PQS.vcxproj  README.md  client.c  client.h  common.h  connections.c  interpreter.c  kex.c  kex.h  server.c  server.h
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Client/: appclt.h
Documents/: PQS Specification.docx
Eclipse/MacOS/Client/: .cproject  .project
Eclipse/MacOS/PQS/: .cproject  .project
Eclipse/MacOS/Server/: .cproject  .project
Eclipse/Ubuntu/Client/: .cproject  .project
Eclipse/Ubuntu/PQS/: .cproject  .project
Eclipse/Ubuntu/Server/: .cproject  .project
PQS/: PQS.sln  PQS.vcxproj.filters  appclt.c  connections.h  logger.c  logger.h
Posix/: CMakeLists.txt  build_sanitizers.sh
Server/: Server.vcxproj.filters  appsrv.h
Source/: PQS.sln
Source/Client/: Client.vcxproj  Client.vcxproj.filters  appclt.c  appclt.h  common.h
Source/PQS/: PQS.vcxproj  PQS.vcxproj.filters  QRCS-PL License.txt  client.c  client.h  connections.c  connections.h  doxymain.h  interpreter.c  interpreter.h  kex.c  kex.h  logger.c  logger.h  pqs.c  pqs.h  pqsadmin.c  pqsadmin.h  pqscommon.h  pqsconfig.c  pqsconfig.h  pqshelp.c  pqshelp.h  pqskey.c  pqskey.h  pqslogger.c  pqslogger.h  pqspolicy.c  pqspolicy.h  pqsprocess.c  pqsprocess.h  pqssandbox.c  pqssandbox.h  pqsshell.c  pqsshell.h  pqsuser.c  pqsuser.h  pqsxfer.c  pqsxfer.h  server.c  (+1 more)
Source/Server/: Server.vcxproj  appsrv.c  appsrv.h  common.h
Source/Tests/: PQS-Tests.vcxproj  PQS-Tests.vcxproj.filters  pqs_test.c  pqs_test.h
Website/html/: annotated_dup.js  classes.html  client_8h_source.html  common_8h.html  format_8h_source.html  globals_defs.html  help_8h_source.html  index.html  index.js  interpreter_8h.js  interpreter_8h_source.html  keychain_8h.html  keychain_8h.js  keychain_8h_source.html  navtreedata.js  navtreeindex1.js  pqs_8h_source.html  server_8h_source.html  structpqs__asymmetric__keychain.html  structpqs__asymmetric__signature__keypair.html  structpqs__connection__set.html  structpqs__kex__client__state.html  structpqs__kex__client__state.js  structpqs__kex__server__state.html  structpqs__server__signature__key.html
Website/latex/: client_8h.tex  client_8h_source.tex  doxymain_8h_source.tex  files.tex  format_8h_source.tex  help_8h_source.tex  index.tex  interpreter_8h.tex  interpreter_8h_source.tex  kex_8h_source.tex  keychain_8h_source.tex  logger_8h_source.tex  pqs_8h.tex  pqs_8h_source.tex  structpqs__asymmetric__cipher__keypair.tex  structpqs__asymmetric__keychain.tex  structpqs__client__verification__key.tex  structpqs__connection__state.tex  structpqs__kex__client__state.tex  structpqs__kex__server__state.tex  structpqs__network__packet.tex  structserver__receiver__state.tex
docs/: annotated.html  annotated_dup.js  classes.html  client_8h.js  client_8h_source.html  common_8h_source.html  connections_8h.html  connections_8h_source.html  dir_1e9536c9e8b0410029ffc8ee300da5ee.html  dir_1e9536c9e8b0410029ffc8ee300da5ee.js  doxygen_crawl.html  doxymain_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  index.js  interpreter_8h.html  kex_8h.html  kex_8h.js  kex_8h_source.html  logger_8h.html  logger_8h.js  logger_8h_source.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  pqs_8h.html  pqs_8h.js  pqs_8h_source.html  pqsadmin_8h.html  pqsadmin_8h.js  pqsadmin_8h_source.html  pqscommon_8h_source.html  (+65 more)
docs/Work/: Doxyfile
docs/html/: annotated.html  client_8h.html  common_8h.js  connections_8h.js  connections_8h_source.html  dir_1e9536c9e8b0410029ffc8ee300da5ee.js  doxygen_crawl.html  doxymain_8h_source.html  files_dup.js  globals_eval.html  kex_8h_source.html  navtreeindex0.js  pqs_8h.html  server_8h.html  structclient__receiver__state.html  structpqs__asymmetric__cipher__keypair.js  structpqs__asymmetric__keychain.js  structpqs__keep__alive__state.html  structpqs__network__packet.js  structserver__receiver__state.html
docs/latex/: annotated.tex  common_8h.tex  common_8h_source.tex  connections_8h.tex  connections_8h_source.tex  doxymain_8h_source.tex  files.tex  index.tex  kex_8h.tex  keychain_8h.tex  logger_8h.tex  pqs_8h_source.tex  pqsadmin_8h.tex  pqsadmin_8h_source.tex  pqscommon_8h_source.tex  pqsconfig_8h.tex  pqsconfig_8h_source.tex  pqshelp_8h_source.tex  pqskey_8h.tex  pqskey_8h_source.tex  pqslogger_8h.tex  pqslogger_8h_source.tex  pqspolicy_8h.tex  pqspolicy_8h_source.tex  pqsprocess_8h.tex  pqsprocess_8h_source.tex  pqssandbox_8h.tex  pqssandbox_8h_source.tex  pqsshell_8h.tex  pqsshell_8h_source.tex  pqsuser_8h.tex  pqsuser_8h_source.tex  pqsxfer_8h.tex  pqsxfer_8h_source.tex  refman.tex  server_8h.tex  server_8h_source.tex  structclient__connection__state.tex  structclient__receiver__state.tex  structpqs__admin__context.tex  (+16 more)
